# TestEx

./: CMakeLists.txt  README.md
cmake/: TestExConfig.cmake.in
include/testex/: macros.hpp  main.hpp
src/testex/: test_case.cpp  test_funcs.cpp  test_gtest_bridge.cpp  test_registry.cpp  test_run.cpp  testex.cpp
tests/: CMakeLists.txt  test_more.cpp  test_tests.cpp
